--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,18 @@ body{
     border-radius: 20px 20px 0px 0px;
 }
 
+.description{
+    margin: 2%;
+}
+
+h1{
+   display: flex;
+   justify-content: center;
+   margin-top: 50px;
+   background-color: red;
+   color: white;
+   padding: 10px;
+}
 .food{
     border: 2px solid red;
     border-radius: 20px;
